# svm_spamdetect

./: CMakeLists.txt  CharEquivalences.cpp  CharEquivalences.h  SVMModel.cpp  SVMModel.h  Timer.h  main.cpp
libsvm_string/: Makefile_debug.win  Makefile_release.win  SVM.H  compile_debug.bat  compile_release.bat  svm-train.c  svm.cpp  svm.cpp_orig
svm/: CharEquivalences.cpp  CharEquivalences.h  ThreadPool.h  svm.cpp  svm.h  svm_spam.cpp  svm_spam.h
svm_test/: main.cpp
